--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Dont changed starter and init content
+Content/Init/*
