--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,3 +1,6 @@
+[/Script/RawInput.RawInputSettings]
++DeviceConfigurations=(VendorID="",ProductID="",AxisProperties=((Key=GenericUSBController_Axis1,bInverted=True),(Key=GenericUSBController_Axis2,bInverted=True,Offset=10.000000),(Key=GenericUSBController_Axis3,bInverted=True,Offset=1.000000),(Key=GenericUSBController_Axis4,bInverted=True,Offset=-1.000000),(Key=GenericUSBController_Axis5),(Key=GenericUSBController_Axis6),(Key=GenericUSBController_Axis7),(Key=GenericUSBController_Axis8)),ButtonProperties=((Key=GenericUSBController_Button1),(Key=GenericUSBController_Button2),(Key=GenericUSBController_Button3),(Key=GenericUSBController_Button4),(Key=GenericUSBController_Button5),(Key=GenericUSBController_Button6),(Key=GenericUSBController_Button7),(Key=GenericUSBController_Button8),(Key=GenericUSBController_Button9),(Key=GenericUSBController_Button10),(Key=GenericUSBController_Button11),(Key=GenericUSBController_Button12),(Key=GenericUSBController_Button13),(Key=GenericUSBController_Button14),(Key=GenericUSBController_Button15),(Key=GenericUSBController_Button16),(Key=GenericUSBController_Button17),(Key=GenericUSBController_Button18),(Key=GenericUSBController_Button19),(Key=GenericUSBController_Button20)))
+
 [/Script/Engine.InputSettings]
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
 -AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
@@ -86,13 +89,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=GenericUSBController_Axis4)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=SpaceBar)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=LeftControl)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Gamepad_RightShoulder)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Gamepad_LeftShoulder)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=@
-
-[/Script/RawInput.RawInputSettings]
-+DeviceConfigurations=(VendorID="",ProductID="",AxisProperties=((Key=GenericUSBController_Axis1,bInverted=True),(Key=GenericUSBController_Axis2,bInverted=True,Offset=10.000000),(Key=GenericUSBController_Axis3,bInverted=True,Offset=1.000000),(Key=GenericUSBController_Axis4,bInverted=True,Offset=-1.000000),(Key=GenericUSBController_Axis5),(Key=GenericUSBController_Axis6),(Key=GenericUSBController_Axis7),(Key=GenericUSBController_Axis8)),ButtonProperties=((Key=GenericUSBController_Button1),(Key=GenericUSBController_Button2),(Key=GenericUSBController_Button3),(Key=GenericUSBController_Button4),(Key=GenericUSBController_Button5),(Key=GenericUSBController_Button6),(Key=GenericUSBController_Button7),(Key=GenericUSBController_Button8),(Key=GenericUSBController_Button9),(Key=GenericUSBController_Button10),(Key=GenericUSBController_Button11),(Key=GenericUSBController_Button12),(Key=GenericUSBController_Button13),(Key=GenericUSBController_Button14),(Key=GenericUSBController_Button15),(Key=GenericUSBController_Button16),(Key=GenericUSBController_Button17),(Key=GenericUSBController_Button18),(Key=GenericUSBController_Button19),(Key=GenericUSBController_Button20)))
 
 
