クローンの生成.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -70,7 +70,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="CloneSplit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="CloneSplit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="CloneSplit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="Debug_LevelUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="Debug_LevelDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
