不要なファイルの削除とリネーム.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -84,8 +84,8 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\*.upluginmanifest
 +EarlyDownloaderPakFileFiles=...\*.uproject
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
-+MapsToCook=(FilePath="/Game/Maps/bk/bk2_StartMap")
-+MapsToCook=(FilePath="/Game/Maps/bk/bk2_PlayingMap")
++MapsToCook=(FilePath="/Game/Maps/StartMap")
++MapsToCook=(FilePath="/Game/Maps/PlayingMap")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
