スコアの枠組み追加とデバッグ機能いれっぱなのを消した.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -71,7 +71,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="CloneSplit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="CloneSplit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="CloneSplit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
 +ActionMappings=(ActionName="Debug_LevelUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="Debug_LevelDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="Select",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
@@ -95,6 +95,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Gamepad_RightShoulder)
 +AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Gamepad_RightTrigger)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Gamepad_LeftTrigger)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
